--- a/devops/prometheus.yml
+++ b/devops/prometheus.yml
@@ -3,6 +3,10 @@ global:
   scrape_interval: 15s
   evaluation_interval: 15s
 
+# Load alert rules
+rule_files:
+  - "prometheus-alerts.yml"
+
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
