--- a/docs/api.yaml
+++ b/docs/api.yaml
@@ -1079,63 +1079,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
-  /api/rules/{id}/enable/:
-    post:
-      tags:
-        - Rules
-      summary: Enable a rule
-      operationId: enableRule
-      description: Activates a rule so it will be evaluated during rule processing
-      security:
-        - BearerAuth: []
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
-      responses:
-        '200':
-          description: Rule enabled successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Rule'
-        '404':
-          description: Rule not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-
-  /api/rules/{id}/disable/:
-    post:
-      tags:
-        - Rules
-      summary: Disable a rule
-      operationId: disableRule
-      description: Deactivates a rule so it will not be evaluated
-      security:
-        - BearerAuth: []
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
-      responses:
-        '200':
-          description: Rule disabled successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Rule'
-        '404':
-          description: Rule not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
 
   /api/rules/evaluate/:
     post:
@@ -1797,7 +1740,6 @@ components:
             value: 6.73
             ts: "2024-04-13T18:50:00Z"
 
-    # Note: The following schemas for rules and events are defined but commented out until the example/examples will be added to the spec.
     Rule:
       type: object
       description: Business logic rule for monitoring and alerting
@@ -1827,7 +1769,7 @@ components:
           example:
             type: "notify"
             message: "User_1 temperature is overwhelming"
-        device_metric:
+        device_metric_id:
           type: integer
           description: Foreign key to DeviceMetric model
           example: 333 
@@ -1837,7 +1779,7 @@ components:
         - is_active
         - condition
         - action
-        - device_metric
+        - device_metric_id
 
     RuleCreate:
       type: object
@@ -1871,7 +1813,7 @@ components:
           type: object
           example: 
             type: "notify"
-        device_metric:
+        device_metric_id:
           type: integer
           description: Foreign key to DeviceMetric model
           example: 123 
@@ -1880,7 +1822,7 @@ components:
         - condition
         - is_active
         - action
-        - device_metric
+        - device_metric_id
 
     RulePatch:
       type: object
@@ -1897,7 +1839,7 @@ components:
         action:
           type: object
       example:
-        enabled: false
+        is_active: false
 
     RuleConditionThreshold:
       type: object
@@ -2022,4 +1964,4 @@ components:
             action:
               type: "notify"
               message: "User_1 temperature is overwhelming"
-            device_metric: 123
+            device_metric_id: 123
