--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -65,8 +65,7 @@ service-identity==24.2.0
 six==1.17.0
 sqlparse==0.5.5
 tornado==6.5.4
-Twisted==25.5.0
-txaio==25.12.2
+txaio==25.9.2txaio==25.12.2
 typing_extensions==4.15.0
 tzdata==2025.3
 ujson==5.11.0
